--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "date-fns": "^2.28.0",
+    "fs-extra": "^10.0.0",
     "mongoose": "^6.1.8",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
